fixed wrap text to display on small screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,9 +8,9 @@ header{
 
 }
 
-main {
+/* main {
   min-width: max-content;
-}
+} */
 
 .borderLine {
   border-top: solid;
